--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -229,8 +229,8 @@ workflows:
             - py36dj111
             - py36dj20
             - py36dj20psql
-          filters:
-            tags:
-              only: /[0-9]+(\.[0-9]+)*/
-            branches:
-              ignore: /.*/
+          # filters:
+          #   tags:
+          #     only: /[0-9]+(\.[0-9]+)*/
+            # branches:
+            #   ignore: /.*/
